# demo/src/main/java/com/example/demo/controller/AdminController.java
@@ -6,6 +6,7 @@ import com.example.demo.dto.CreateDoctorRequest;
 import com.example.demo.dto.DoctorLoginRequest;
 import com.example.demo.model.Doctor;
 import com.example.demo.service.DoctorAdminService;
+import io.swagger.v3.oas.annotations.security.SecurityRequirements;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -19,6 +20,7 @@ public class AdminController {
         this.doctorAdminService = doctorAdminService;
     }
 
+    @SecurityRequirements()
     @PostMapping("/create-doctor")
     public ResponseEntity<ApiResponse> createDoctor(@RequestBody CreateDoctorRequest request) {
         Doctor doctor = doctorAdminService.createDoctor(request);
@@ -27,8 +29,9 @@ public class AdminController {
         ));
     }
 
-    @PostMapping("/login")
-    public ResponseEntity<AuthResponse> login(@RequestBody DoctorLoginRequest request) {
+    @SecurityRequirements()
+        @PostMapping("/login")
+        public ResponseEntity<AuthResponse> login(@RequestBody DoctorLoginRequest request) {
         return ResponseEntity.ok(doctorAdminService.doctorLogin(request));
     }
 
